--- a/src/component/cart-dropdown/cart-dropdown-styles.scss
+++ b/src/component/cart-dropdown/cart-dropdown-styles.scss
@@ -8,14 +8,14 @@
   border: 1px solid black;
   background-color: white;
   top: 90px;
-  right: 90px;
+  right: 40px;
   z-index: 5;
 
   .cart-items {
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    overflow: scroll;
   }
 
   button {
