--- a/src/component/checkout/check-out-component.scss
+++ b/src/component/checkout/check-out-component.scss
@@ -28,4 +28,10 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    color: Red;
+    margin-bottom: 10px;
+    font-size: 24px;
+  }
 }
